# shipster

./: .dockerignore  .env.example  .gitignore  .importlinter  Dockerfile  docker-compose.yml  main.py  pyproject.toml
apps/auth/application/: authenticate_user.py  change_password.py  process_password_reset_notifications.py  request_password_reset.py  verify_access_token.py
apps/auth/domain/: errors.py
apps/auth/infrastructure/: jwt_access_token.py
apps/auth/interfaces/: dependencies.py  schedule_registration.py
apps/messaging/: __init__.py  factory.py
apps/messaging/application/: __init__.py  public_event_dispatcher.py
apps/messaging/domain/: __init__.py  entities.py
apps/messaging/infrastructure/: __init__.py  rabbitmq_messaging.py  redis_streams.py
apps/notifications/: __init__.py
apps/notifications/application/: __init__.py  send_notification.py
apps/notifications/domain/: __init__.py  entities.py
apps/notifications/infrastructure/: __init__.py  smtp_email_sender.py  telegram_sender.py
apps/orders/application/: create_order.py  get_order.py
apps/orders/domain/: entities.py  errors.py
apps/orders/interfaces/: dependencies.py  schedule_registration.py
apps/organizations/application/: accept_organization_invitation.py  create_organization.py  get_organization.py  (+3 more)
apps/shared/: __init__.py
apps/users/: __init__.py
postman/: Shipster.postman_collection.json  shipster-export-0b60887c-a429-49b3-8abc-473139bcbf46.json
shipster/platform/: __init__.py  app.py  http_audit.py  logging_bootstrap.py  redis_client.py  settings.py  worker.py
(+149 files in other folders)
